Closed
Bug 1179397
Opened 10 years ago
Closed 10 years ago
Assert/Crash running "fetch-event-async-respond-with.https.html" wpt service worker test in Nightly
Categories
(Core :: DOM: Service Workers, defect)
Core
DOM: Service Workers
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: noemi, Assigned: ehsan.akhgari)
References
Details
Attachments
(2 files)
111.51 KB,
text/rtf
|
Details | |
2.59 KB,
patch
|
jdm
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
A Nightly crash occurs when executing "fetch-event-async-respond-with.https.html" wpt test such as |./mach web-platform-tests _mozilla/service-workers/service-worker/fetch-event-async-respond-with.https.html| with today's (7/1) master build
The assertion failure shown is as follows:
"Assertion failure: workerPrivate, at /Users/noef/Documents/mozilla-central/dom/workers/ServiceWorker.cpp:93"
Please find attached the crash report corresponding to this
Assignee | ||
Comment 1•10 years ago
|
||
This is another instance of bug 1179401.
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → DUPLICATE
![]() |
Reporter | |
Comment 2•10 years ago
|
||
Hi,
just checked on m-c (89732fcdb0ba revision) once bug 1179401 has been landed and the result obtained when running |./mach web-platform-tests _mozilla/service-workers/service-worker/fetch-event-async-respond-with.https.html| is as follows:
Summary
Harness status: OK
Found 1 tests
1 Fail
Details
Result
Fail
Test Name
Calling respondWith asynchronously throws an exception
Message
promise_test: Unhandled rejection with value: object "InvalidStateError: An attempt was made to use an object t..."
@https://web-platform.test:8443/_mozilla/service-workers/service-worker/fetch-event-async-respond-with.https.html:7:1
Ehsan, should we open a new bug?. Thanks!
Flags: needinfo?(ehsan)
Assignee | ||
Comment 3•10 years ago
|
||
No, we can reopen this one.
Status: RESOLVED → REOPENED
Flags: needinfo?(ehsan)
Resolution: DUPLICATE → ---
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → ehsan
Assignee | ||
Comment 4•10 years ago
|
||
Attachment #8671024 -
Flags: review?(josh)
Updated•10 years ago
|
Attachment #8671024 -
Flags: review?(josh) → review+
Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8671024 [details] [diff] [review]
Disallow FetchEvent.respondWith() when the dispatch flag is unset
Approval Request Comment
[Feature/regressing bug #]: service workers
[User impact if declined]: spec compliance issue
[Describe test coverage new/current, TreeHerder]: locally
[Risks and why]: no risk
[String/UUID change made/needed]: none
Attachment #8671024 -
Flags: approval-mozilla-aurora?
![]() |
||
Comment 7•10 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 10 years ago → 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
![]() |
Reporter | |
Comment 8•10 years ago
|
||
Hi,
just checked on m-c (0b69d304f861 revision) and the test successfully runs. Thanks for fixing it!
Summary
Harness status: OK
Found 1 tests
1 Pass
Details
Result Test Name
Pass Calling respondWith asynchronously throws an exception
![]() |
||
Comment 9•10 years ago
|
||
Comment on attachment 8671024 [details] [diff] [review]
Disallow FetchEvent.respondWith() when the dispatch flag is unset
Fix for crash in service workers, ok to uplift to aurora.
Attachment #8671024 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
![]() |
||
Comment 10•10 years ago
|
||
Tracking since this is a regression and part of a feature we're aiming at 43.
![]() |
||
Comment 12•10 years ago
|
||
Sorry had to backout and recheckin this since this turned innocent for a memory leaks, sorry for the hassle
You need to log in
before you can comment on or make changes to this bug.
Description
•