Bug 1179397 - Disallow FetchEvent.respondWith() when the dispatch flag is unset on a CLOSED TREE ; r=jdm

--HG--
extra : source : 0dd6a4a5da3d275dfd7758f7c6d35a25ca50bf28
extra : amend_source : d37db05010ae5c47e0e96aa1caba08c20ecf3704